--- a/main.css
+++ b/main.css
@@ -72,3 +72,13 @@
   background-image: linear-gradient(to right, #FF5478, #FF673D);
   box-shadow: 0px 15px 50px rgba(255, 84, 120, 0.5);
 }
+
+@media screen and (max-width: 780px) {
+  .max-width-custom {
+    max-width: 375px;
+  }
+}
+
+.max-width-custom {
+  max-width: 800px;
+}
